<resources>
    <string name="app_name">TodayKnowledge</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="job_grouping">JOB : อาชีพ</string>
    <string name="fruit_grouping">FRUIT : ผลไม้</string>
    <string name="animal_grouping">ANIMAL : สัตว์</string>
    <string name="color_grouping">COLOR : สี</string>
    <string name="exercise_textView"><u>Exercise</u></string>
    <string name="watermelon">watermelon</string>
    <string name="GroupingVocab">FRUIT</string>
    <string name="username">BEST</string>
    <string name="scoer_execise">100 Score</string>
    <string name="button_main">Main</string>
    <string name="todo">TODO</string>
    <string name="todays_knowledge">Today\'s Knowledge</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="about_text">เกี่ยวกับ</string>
    <string name="about_information1">วิธีการเล่น</string>
    <string name="about_information2">1. กรอกชื่อเล่น</string>
    <string name="about_information3">2.เลือกหมวดหมู่ในเรียนรู้</string>
    <string name="about_information4">3.อ่านคำศัพท์และสามารถกดปุ่ม Exercise เพื่อทดสอบคำศัทพ์ได้</string>
    <string name="about_information5">4.กดเลือกคำตอบที่ถูกต้อง มีให้เล่นทั้งหมด 3 ข้อ</string>
    <string name="about_text2">เป็นแอปพลิเคชันที่เหมาะสำหรับเด็กเล็กๆที่พึ้งหัดเรียนรู้อ่านคำศัพท์ทำให้เด็กเสริมสร้างพัฒนาการใหม่</string>
    <string name="vocabulary_grouping">Vocabulary grouping</string>
    <string name="vocab1">Apple : แอปเปิ้ล</string>
    <string name="vocab2">Pumpkin : ฟังทอง</string>
    <string name="vocab3">Watermeron : แตงโม</string>
    <string name="vocab4">Banana : กล้วย</string>
    <string name="share_success_text">My name is %1$s. My Score %2$d!! From ลับสมองประลองปัญญา App</string>
    <string name="vocab_image1" />
    <string name="share_menu" />
    <string name="total_score">TOTAL SCORE</string>
    <string name="test_button">Test</string>
    <string name="name_input">กรุณากรอกชื่อ</string>
    <string name="color">color</string>
    <string name="animall">animall</string>
    <string name="jobb">jobb</string>
    <string name="foodd">foodd</string>
    <string name="img2">TODO</string>
    <string name="img3">img3</string>
    <string name="img4">img4</string>
</resources>
